--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "postinstall": "husky install"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.19",
+    "graphql": "^15.5.0",
     "next": "^10.1.3",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-player": "^2.9.0",
+    "sass": "^1.34.1"
   },
   "devDependencies": {
     "@babel/core": "^7.14.0",
