--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   },
   "dependencies": {
     "@apollo/client": "^3.3.19",
+    "dayjs": "^1.10.5",
     "graphql": "^15.5.0",
-    "next": "^10.1.3",
+    "next": "^10.2.3",
+    "query-string": "^7.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-player": "^2.9.0",
